# Sax-Emitter

./: CMakeLists.txt  main.cpp
include/: CGMinerAPI.hpp  TCPClientConnection.hpp  TCPConnection.hpp  TCPServerConnection.hpp
src/: CGMinerAPI.cpp  TCPClientConnection.cpp  TCPConnection.cpp  TCPServerConnection.cpp
